k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_ID}-deployment
  namespace: ${KUBE_NAMESPACE}
spec:
  replicas: ${APP_NODES}
  selector:
    matchLabels:
      app: ${APP_ID}
  template:
    metadata:
      labels:
        app: ${APP_ID}
    spec:
      containers:
      - name: ${APP_ID}
        image: ${DOCKER_USERNAME}/${APP_ID}:${VERSION}
        ports:
        - containerPort: ${API_PORT}
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - curl -s --fail --max-time 2 "http://admin:$(env | grep HTTP_PASSWD= | sed 's/HTTP_PASSWD=//')@localhost:${API_PORT}/healthcheck" | grep -q disponible
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 2
          timeoutSeconds: 2
        securityContext:
          runAsUser: 1000
          capabilities:
            drop:
              - all
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        volumeMounts:
          - name: cert-ca
            mountPath: /etc/elasticsearch/certificates
            readOnly: true
      volumes:
      - name: cert-ca
        secret:
          secretName: ${APP_GROUP}-es-http-certs-public
