k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_ID}-loadbalancer
  namespace: ${KUBE_INGRESS_NAMESPACE}
  labels:
    k8s.scw.cloud/ingress: nginx
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  annotations:
    service.beta.kubernetes.io/scw-loadbalancer-proxy-protocol-v2: "*"
    service.beta.kubernetes.io/scw-loadbalancer-zone: ${SCW_ZONE}
    service.beta.kubernetes.io/scw-loadbalancer-force-internal-ip: "true"
spec:
  type: LoadBalancer
  ${APP_RESERVED_IP_SPEC}
  ports:
  - port: 80
    name: http
    targetPort: 80
  - port: 443
    name: https
    targetPort: 443
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
---
# workaround https://github.com/compumike/hairpin-proxy
# for bug https://github.com/jetstack/cert-manager/issues/466 in http01 solver
# dns01 could be used but scaleway DNS tokens aren't scoped enough for secured Kube usage
apiVersion: v1
kind: Namespace
metadata:
  name: hairpin-proxy

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hairpin-proxy-haproxy
  name: hairpin-proxy-haproxy
  namespace: hairpin-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hairpin-proxy-haproxy
  template:
    metadata:
      labels:
        app: hairpin-proxy-haproxy
    spec:
      containers:
        - image: compumike/hairpin-proxy-haproxy:0.2.1
          name: main
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "200Mi"
              cpu: "50m"
---

apiVersion: v1
kind: Service
metadata:
  name: hairpin-proxy
  namespace: hairpin-proxy
spec:
  selector:
    app: hairpin-proxy-haproxy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hairpin-proxy-controller
  name: hairpin-proxy-controller
  namespace: hairpin-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hairpin-proxy-controller
  template:
    metadata:
      labels:
        app: hairpin-proxy-controller
    spec:
      serviceAccountName: hairpin-proxy-controller-sa
      securityContext:
        runAsUser: 405
        runAsGroup: 65533
      containers:
        - image: compumike/hairpin-proxy-controller:0.2.1
          name: main
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
              cpu: "50m"
