k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_ID}-route
  namespace: ${KUBE_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/whitelist-source-range: "${IP_WHITELIST}"
    nginx.ingress.kubernetes.io/server-snippet: |
      error_page 403 @forbidden;
      location @forbidden {
        return 301 https://www.courdecassation.fr;
      }
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - ${APP_HOST}
    secretName: ${APP_ID}-cert-${ACME}
  ${TLS_ALTER_SPEC}
  rules:
  - host: ${APP_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${APP_ID}-svc
            port:
              number: 80
  ${HOST_ALTER_SPEC}
